Fixed layout issue, and initial status on display connection

--- a/html/stylesheet.css
+++ b/html/stylesheet.css
@@ -1,9 +1,19 @@
-#status{
-    font-size: 16vw;
+h2{
+height:90vh;
+align-items:center;
+display:flex;
 }
+h2 > #status {
+	font-size:14vw;
+	width:100%;
+	text-align:center;
+	vertical-align: middle;
+}
+
 #displayName{
 	display:none;
 }
+
 .displayDiv{
 	border: solid rgba(0,0,0,.2) 1px;
 	margin-bottom:10px;
